samples/_failures_safe/1761495803_afcb2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d32dcd5.c: In function ‘main’:
./samples/SAFE/__tmp_8d32dcd5.c:116:12: error: missing terminating " character
  116 |     printf("Compressed data
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8d32dcd5.c:116:5: error: expected expression at end of input
  116 |     printf("Compressed data
      |     ^~~~~~
./samples/SAFE/__tmp_8d32dcd5.c:116:5: error: expected declaration or statement at end of input
